# scenefactor

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: dataconfig_graspnet.yaml  dataconfig_replica_vmap.yaml  factorization.yaml  factorization_graspnet.yaml  factorization_replica_vmap.yaml  reader_replica_vmap.yaml  sequence_reader_scannet.yaml
notebooks/: mesh_refinement.ipynb
src/scenefactor/: factorization.py  factorization_common.py  factorization_extractor.py  factorization_generator.py  factorization_inpainter.py  factorization_utils.py  label_finder.py  occlusion_resolver.py  sequence_extractor.py  sequence_extractor_ranking_losses.py  sequence_factorization.py  sequence_factorization_utils.py  sequence_inpainter.py  sequence_registration.py  sequence_segmentation.py  simulator.py
src/scenefactor/data/: common.py  mesh.py  sequence.py  sequence_reader.py  sequence_reader_base.py  sequence_reader_graspnet.py  sequence_reader_replica_vmap.py  sequence_reader_replica_vmap.yaml  sequence_reader_scannetpp.py
src/scenefactor/models/: __init__.py  model_clip.py  model_gpt.py  model_grounding_dino.py  model_instant_mesh.py  model_lama.py  model_loftr.py  model_ram.py  model_sam.py  model_sam2.py  model_stable_diffusion.py  model_triposr.py  transforms.py
src/scenefactor/renderer/: renderer.py  renderer_implicit.py  renderer_implicit_config.py  renderer_implicit_data.py  renderer_implicit_data_utils.py  renderer_implicit_model.py  renderer_implicit_pipeline.py
src/scenefactor/utils/: camera.py  camera_generation.py  colormaps.py  geom.py  tensor.py  visualize.py
