[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scenefactor"
version = "0.0.1"
description = "Efficient Scene Factorization with 2D and 3D Priors"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "kornia",
    "kornia_moons",
    "lightning",
    "matplotlib",
    "natsort",
    "ninja",
    "numpy==1.26.4",
    "omegaconf",
    "openai-clip",
    "opencv-python",
    "pyrender",
    "torch",
    "torchvision",
    "torchtyping",
    "tqdm",
    "trimesh",
]

[project.optional-dependencies]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]
include = ["scenefactor*"]

[project.entry-points.'nerfstudio.method_configs']
scenefactor = 'scenefactor.renderer.renderer_implicit_config:ScenefactorMethod'